cmake_minimum_required(VERSION 3.17)
project(tp1_Poo_2021)

set(CMAKE_CXX_STANDARD 14)

add_executable(tp1_Poo_2021 main.cpp Club_class.cpp Club_class.h Joueur_class.cpp Joueur_class.h Entraineur_class.cpp Entraineur_class.h LigueSportive_class.cpp LigueSportive_class.h Stade_class.cpp Stade_class.h)